# ragsst

./: .dockerignore  .gitignore  Dockerfile  FAQ.md  README.md  app.py  docker-compose-gpu.yml  docker-compose.yml  entrypoint.sh  parameters.py  pyproject.toml  ragasst_template.py  ragsst.py  requirements.txt  run.sh  utils.py
.github/workflows/: docker-publish.yml
data/: nachts_schlafen_dir_ratten_doch.txt
data/sample_docs/: aihpi-home.txt  die-hard.txt  wild-tales.txt
learning-materials/: 00_overview.ipynb  01_workflow.ipynb  01_workflow.py  02_query_transformations.ipynb
ragsst/: __init__.py  interface.py  parameters.py  query_transformations.py  ragtool.py  ragtool_backup.py  utils.py
sample_data/: aihpi-home.txt
