[project]
name = "ragsst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "aiofiles==23.2.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asgiref==3.9.1",
    "backoff==2.2.1",
    "bcrypt==4.3.0",
    "build==1.2.2.post1",
    "cachetools==5.5.2",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "chroma-hnswlib==0.7.6",
    "chromadb==0.5.5",
    "click==8.2.1",
    "coloredlogs==15.0.1",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "distro==1.9.0",
    "durationpy==0.10",
    "einops==0.8.1",
    "exceptiongroup==1.3.0",
    "fastapi==0.116.1",
    "ffmpy==0.6.1",
    "filelock==3.18.0",
    "flatbuffers==25.2.10",
    "fonttools==4.59.0",
    "fsspec==2025.7.0",
    "google-auth==2.40.3",
    "googleapis-common-protos==1.70.0",
    "gradio==4.44.1",
    "gradio-client==1.3.0",
    "grpcio==1.74.0",
    "h11==0.16.0",
    "hf-xet==1.1.5",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "huggingface-hub==0.34.2",
    "humanfriendly==10.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "ipykernel>=6.30.0",
    "jellyfish==1.2.0",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "jupyter>=1.1.1",
    "kiwisolver==1.4.8",
    "kubernetes==33.1.0",
    "lxml==6.0.0",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.10.3",
    "mdurl==0.1.2",
    "mmh3==5.1.0",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==1.26.4",
    # NVIDIA CUDA packages - only for Linux and Windows (all distributions/versions)
    "nvidia-cublas-cu12==12.6.4.1; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-cuda-cupti-cu12==12.6.80; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-cuda-nvrtc-cu12==12.6.77; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-cuda-runtime-cu12==12.6.77; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-cudnn-cu12==9.5.1.17; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-cufft-cu12==11.3.0.4; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-cufile-cu12==1.11.1.6; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-curand-cu12==10.3.7.77; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-cusolver-cu12==11.7.1.2; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-cusparse-cu12==12.5.4.2; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-cusparselt-cu12==0.6.3; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-nccl-cu12==2.26.2; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-nvjitlink-cu12==12.6.85; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-nvtx-cu12==12.6.77; sys_platform == 'linux' or sys_platform == 'win32'",
    "oauthlib==3.3.1",
    "onnxruntime==1.22.1",
    "opentelemetry-api==1.35.0",
    "opentelemetry-exporter-otlp-proto-common==1.35.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.35.0",
    "opentelemetry-instrumentation==0.56b0",
    "opentelemetry-instrumentation-asgi==0.56b0",
    "opentelemetry-instrumentation-fastapi==0.56b0",
    "opentelemetry-proto==1.35.0",
    "opentelemetry-sdk==1.35.0",
    "opentelemetry-semantic-conventions==0.56b0",
    "opentelemetry-util-http==0.56b0",
    "orjson==3.11.1",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.3.1",
    "pillow==10.4.0",
    "pip==22.0.2",
    "posthog==6.3.1",
    "protobuf==6.31.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydub==0.25.1",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "pypdf==5.9.0",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.1.2",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "rich==14.1.0",
    "rsa==4.9.1",
    "ruff==0.12.5",
    "safetensors==0.5.3",
    "scikit-learn==1.7.1",
    "scipy==1.15.3",
    "segtok==1.5.11",
    "semantic-version==2.10.0",
    "sentence-transformers==5.0.0",
    "setuptools==59.6.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.47.2",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.2",
    "tomli==2.2.1",
    "tomlkit==0.12.0",
    # PyTorch - will automatically select appropriate version based on platform
    "torch==2.7.1",
    # Triton only for CUDA platforms
    "triton==3.3.1; sys_platform == 'linux' or sys_platform == 'win32'",
    "tqdm==4.67.1",
    "transformers==4.54.0",
    "typer==0.16.0",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "uvloop==0.21.0",
    "watchfiles==1.1.0",
    "websocket-client==1.8.0",
    "websockets==12.0",
    "wrapt==1.17.2",
    "yake==0.6.0",
    "zipp==3.23.0",
]

[tool.uv]
# Configure uv to handle platform-specific dependencies properly
index-strategy = "unsafe-best-match"
